--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,72 +1,98 @@
-.header{
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 40px;
-    border-bottom: 4px solid rgb(144, 144, 144);
-    background-color: rgb(227, 225, 225);
-    position: relative;
-
+.header {
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 40px;
+  border-bottom: 4px solid rgb(144, 144, 144);
+  background-color: rgb(227, 225, 225);
+  position: relative;
 }
 
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
-
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-
-.logo{
-    display: flex;
-    align-items: center;
-    font-size: 24px;
-    font-weight: bold;
-    color: rgb(176, 15, 176);
+.logo {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: rgb(176, 15, 176);
 }
 
+.menu {
+  font-size: 40px;
+  font-weight: bold;
+  color: #202121;
+  cursor: pointer;
+  display: none;
+}
+.navLinks {
+  margin-left: 30px;
+}
 
-.navLinks{
-    margin-left: 30px;
-
-} 
-
-.navLink{
-    margin: 0 12px;
-    font-size: 20px;
-    font-weight: 600;
-    
+.navLink {
+  margin: 0 12px;
+  font-size: 20px;
 }
 
 .btn {
-    cursor: pointer;
-    background-color: blue;
-    color: white;
-    border-radius: 10px;
-    padding: 5px 10px;
-    font-size: 18px;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-   
+  cursor: pointer;
+  background-color: blue;
+  color: white;
+  border-radius: 10px;
+  padding: 5px 10px;
+  font-size: 18px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
 }
 .btn:hover {
-    background-color: darkblue;
+  background-color: darkblue;
 }
-.navLink:hover{
-    color: darkblue;
+.navLink:hover {
+  color: darkblue;
 }
-.right{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    
-   
-    
-    
+.right {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
-.logo:hover{
-    color: darkmagenta;
+.logo:hover {
+  color: darkmagenta;
+}
+
+@media (max-width: 1080px) {
+  .logo {
+    display: none;
+  }
+
+  .menu {
+    display: block;
+  }
+
+  .navLinksWrapper {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    width: 100%;
+    background-color: inherit;
+    transition: all 0.5s ease-in;
+    z-index: 100;
+    background-color: rgb(227, 225, 225);
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  }
+  .navLinks {
+    padding-left: 30px;
+    padding-bottom: 10;
+    margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
 }
